* What is new in gsl-2.2:

** added support for compressed row storage sparse
   matrices (Alexis Tantet)

** bug fix in convergence check of hypergeometric 2F1
   function (bug #45926)

** updated multilarge normal equations method to use
   new Cholesky scaling for better numerical stability

** added new Cholesky routines
   _decomp2, _solve2, _svx2, _scale
   to attempt to reduce the condition number of
   the matrix prior to factorization

* What was new in gsl-2.1:

** added test suite for example programs

** bug fix when compiling with #undef GSL_DISABLE_DEPRECATED

** bug fix in setting libtool age versioning

** bug fix in gsl_multifit_wlinear()

** added gsl_multifit_linear_rcond() to compute reciprocal
   condition number of least squares matrix

** added gsl_multilarge module for large linear least squares
   systems

* What was new in gsl-2.0:

** fixed bug #43258 for hypergeometric functions (Raymond Rogers)

** added L-curve analysis routines for linear Tikhonov regression

** add running statistics module

** added bilinear and bicubic interpolation (David Zaslavsky)

** added function gsl_multifit_robust_residuals to compute robust
   fit residuals

** added Steffen monotonic interpolation method (Jean-François Caron)

** added new nonlinear least squares solver 'lmniel' suitable for
   systems with large numbers of data

** nonlinear least squares solver now tracks the number of function
   and Jacobian evaluations, see example program for details

** the 'fdf' field of gsl_multifit_function_fdf is now deprecated
   and does not need to be specified for nonlinear least squares
   problems

** added extensive test suite to nonlinear least squares module,
   resulting in a few minor bug fixes; the routine
   gsl_multifit_fdfsolver_driver has been rewritten (with API change)
   to handle the various error codes of the lmsder iterate
   routine, resulting in a high level caller which is highly robust
   for a wide class of problems
