@@ -1,6 +1,7 @@
 /* specfunc/bessel_K1.c
  * 
  * Copyright (C) 1996, 1997, 1998, 1999, 2000 Gerard Jungman
+ * Copyright (C) 2016 Pavel Holoborodko
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -146,7 +147,7 @@ int gsl_sf_bessel_K1_scaled_e(const double x, gsl_sf_result * result)
     gsl_sf_result c;
     cheb_eval_e(&bk1_cs, 0.5*x*x-1.0, &c);
     stat_I1 = gsl_sf_bessel_I1_e(x, &I1);
-    result->val  = ex * ((lx-M_LN2)*I1.val + (0.75 + c.val)/x);
+    result->val  = ex * (log(0.5*x)*I1.val + (0.75 + c.val)/x);
     result->err  = ex * (c.err/x + fabs(lx)*I1.err);
     result->err += 2.0 * GSL_DBL_EPSILON * fabs(result->val);
     return stat_I1;
@@ -189,7 +190,7 @@ int gsl_sf_bessel_K1_e(const double x, gsl_sf_result * result)
     gsl_sf_result c;
     cheb_eval_e(&bk1_cs, 0.5*x*x-1.0, &c);
     stat_I1 = gsl_sf_bessel_I1_e(x, &I1);
-    result->val  = (lx-M_LN2)*I1.val + (0.75 + c.val)/x;
+    result->val  = log(0.5*x)*I1.val + (0.75 + c.val)/x;
     result->err  = c.err/x + fabs(lx)*I1.err;
     result->err += 2.0 * GSL_DBL_EPSILON * fabs(result->val);
     return stat_I1;
